--- a/manifest.json
+++ b/manifest.json
@@ -7964,10 +7964,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/zip/client-standalone-OSS.xml",
+      "source_relative_path": "home/zip/client-standalone-OSS.txt",
       "output": {
         "resource": {
-          "relative_path": "home/zip/client-standalone-OSS.xml"
+          "relative_path": "home/zip/client-standalone-OSS.txt"
         }
       },
       "is_incremental": false,
@@ -7975,10 +7975,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/zip/client-standalone-TSS.xml",
+      "source_relative_path": "home/zip/client-standalone-TSS.txt",
       "output": {
         "resource": {
-          "relative_path": "home/zip/client-standalone-TSS.xml"
+          "relative_path": "home/zip/client-standalone-TSS.txt"
         }
       },
       "is_incremental": false,
@@ -8204,6 +8204,11 @@
         "incrementalPhase": "build"
       },
       "processors": {
+        "ResourceDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
         "TocDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
@@ -8220,11 +8225,6 @@
         },
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
-          "incrementalPhase": "build"
-        },
-        "ResourceDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         }
       }
