--- a/manifest.json
+++ b/manifest.json
@@ -1253,7 +1253,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/deploy-an-update-to-an-existing-environment.html",
-          "hash": "FoHW0tcqOuA8WOdaqLgMYA=="
+          "hash": "vIgfnZh+duerOPj9JKSgLA=="
         }
       },
       "is_incremental": false,
@@ -5373,6 +5373,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/organisation-details.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/organisation-details.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/organisation-id.png",
       "output": {
         "resource": {
@@ -7910,7 +7921,7 @@
       "output": {
         ".html": {
           "relative_path": "home/user-creation-in-paas.html",
-          "hash": "h0+k6Lsh2G8tG+vKYCCWlg=="
+          "hash": "teAf/7iFicoE0mbkZCnGMQ=="
         }
       },
       "is_incremental": false,
@@ -8237,14 +8248,14 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "RestApiDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "TocDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "RestApiDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
