--- a/manifest.json
+++ b/manifest.json
@@ -324,6 +324,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/images/create-user-2.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/images/create-user-2.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/images/create-user-role-permissions.png",
       "output": {
         "resource": {
@@ -482,6 +493,28 @@
       "output": {
         "resource": {
           "relative_path": "home/images/new-environment.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/images/organisation-arrows.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/images/organisation-arrows.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/images/organisation-details.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/images/organisation-details.png"
         }
       },
       "is_incremental": false,
@@ -7921,7 +7954,7 @@
       "output": {
         ".html": {
           "relative_path": "home/user-creation-in-paas.html",
-          "hash": "teAf/7iFicoE0mbkZCnGMQ=="
+          "hash": "CCQupzse5nPEWNBNidG0pA=="
         }
       },
       "is_incremental": false,
@@ -8248,14 +8281,14 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "TocDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "RestApiDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "TocDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
