--- a/manifest.json
+++ b/manifest.json
@@ -1286,7 +1286,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/deploy-an-update-to-an-existing-environment.html",
-          "hash": "vIgfnZh+duerOPj9JKSgLA=="
+          "hash": "cWPloHTUkEmi7sYsiOXffg=="
         }
       },
       "is_incremental": false,
@@ -2847,6 +2847,17 @@
       "output": {
         "resource": {
           "relative_path": "home/techguides/images/db-login.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/db-nonmodel.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/db-nonmodel.png"
         }
       },
       "is_incremental": false,
@@ -8281,14 +8292,14 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "ResourceDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "TocDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "ResourceDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "RestApiDocumentProcessor": {
